--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <title>Clicker</title>
 </head>
 <body id="b">
+<script href="https://code.sololearn.com/WWK5nPVIEupf/"></script>
 <script href="https://code.sololearn.com/WWK5nPVIEupf/#html"></script>
 <script href="https://code.sololearn.com/WWK5nPVIEupf/#css"></script>
 <script href="https://code.sololearn.com/WWK5nPVIEupf/#js"></script>
+<script src="https://code.sololearn.com/WWK5nPVIEupf/"></script>
 <script src="https://code.sololearn.com/WWK5nPVIEupf/#html"></script>
 <script src="https://code.sololearn.com/WWK5nPVIEupf/#css"></script>
 <script src="https://code.sololearn.com/WWK5nPVIEupf/#js"></script>
