--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Clicker</title>
+<title>Mining-Dig-Clicker-Tycoon-6.8</title>
 </head>
 <body id="b">
 <script href="https://code.sololearn.com/WWK5nPVIEupf/"></script>
