--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@ function admpanel() {
         document.close();
         back();
     }
-    else if (pass == 'Coins') {
+    else if (pass == 'Coins',"Coins") {
         money = prompt('Eneter coins number:');
         alert('Your number money is ' + money);
         document.close();
