--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <input type="button" id="button" value="Start" onClick="back()">
 <input type="button" value="Download" onClick="load()">
 <input type="button" id="button" value="Exit" onClick="window.close()">
-<div class="link"><a href="https://www.sololearn.com/Profile/13145015">Daniel Shively</a> did the design. Check out his profile.</div>
+<div class="link"><a href="https://github.com/Daniel2019Creator1">Daniel Shively</a> did the design. Check out his profile.</div>
 <!--<script type="text/javascript">
     alert('This game is the port of my game written in Pascal');
     alert('I\'m waiting for you suggestions about improving the game');
